Updated index.html with meta tags, added genre to PodcastList component, and made changes to SeriesDetail component

--- a/MyCast/index.html
+++ b/MyCast/index.html
@@ -3,11 +3,31 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>myCast</title>
+    <!-- Primary Meta Tags -->
+    <title>myCast, Listen to Anything, Anywhere, Anytime!</title>
+    <meta name="title" content="myCast, Listen to Anything, Anywhere, Anytime!" />
+    <meta name="description" content="Listen to Anything, Anywhere, Anytime!" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://metatags.io/" />
+    <meta property="og:title" content="myCast, Listen to Anything, Anywhere, Anytime!" />
+    <meta property="og:description" content="Listen to Anything, Anywhere, Anytime!" />
+    <meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://metatags.io/" />
+    <meta property="twitter:title" content="myCast, Listen to Anything, Anywhere, Anytime!" />
+    <meta property="twitter:description" content="Listen to Anything, Anywhere, Anytime!" />
+    <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+
+    <!-- Meta Tags Generated with https://metatags.io -->
   </head>
   <body>
     <div id="root"></div>
